--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,6 +14,10 @@ html {
   font-family: 'DM Sans', sans-serif;
 }
 
+body {
+  background-color: var(--page-background);
+}
+
 .hero-container {
   display: flex;
   justify-content: center;
